2008-04-15  Andy Wingo  <wingo@pobox.com>

	* modulesets/bootstrap.modules: Update libtool to 1.5.26 +
	multilib patch from Fedora's 1.5.24. See #518067.

	* patches/libtool-1.5.24-multilib.patch: New file.

2008-04-15  Ross Burton  <ross@openedhand.com>

	* modulesets/mobile-2.24.modules:
	* modulesets/matchbox.modules:
	* modulesets/pimlico.modules:
	Add module sets for the Mobile platform, the Matchbox suite, and the
	Pimlico suite.

2008-04-15  Emmanuele Bassi  <ebassi@gnome.org>

	* modulesets/gnome-2.24.modules: PyClutter was branched
	for the 0.6 development cycle.

2008-04-14  William Jon McCann  <jmccann@redhat.com>

	* jhbuild/utils/trayicon.py: Signal zenity when shutting down.
	Fixes #526745

2008-04-14  Andy Wingo  <wingo@pobox.com>

	* jhbuild/modtypes/autotools.py (AutogenModule.do_configure):
	Construct the autogen command line from an overridable template.
	See #486949.
	(AutogenModule): Add autogen_template initarg and member variable,
	to override the default template.
	(parse_autotools): Parse out an 'autogen-template' attribute.

	* doc/C/jhbuild.xml: Doc autogen-template.

	* modulesets/moduleset.dtd: Add autogen-template attr.

2008-04-13  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.22.modules: branched libgnomekbd,
	gnome-python-desktop, evince, gnome-volume-manager and sound-juicer for
	2.22.

2008-04-13  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.24.modules: Add transmission bittorrent client;
	you need OpenSSL to compile as non managed dependence.
	
	* modulesets/gnome-external-deps-2.24.modules: Bump cairo to 1.6.4
	and cairomm to 1.6.0 (pycairo 1.6.x still missing).

2008-04-12  Emmanuele Bassi  <ebassi@gnome.org>

	* modulesets/gnome-2.24.modules: Update clutter moduleset to
	use the 0.6 branch for the integration libraries.

2008-04-11  Christian Persch  <chpe@gnome.org>

	* modulesets/gnome-2.24.modules: Add epiphany-extensions-webkit
	module.
