@@ -808,6 +808,9 @@ libgnomecanvas is missing branch definition for gnome-2-20
       JHBuild.  It may also print some information specific to the
       module type, such as the CVS repository or download URL.</para>
 
+      <para>If there is no module specified the command will print information
+      about all the modules defined in the module set.</para>
+
     </section>
 
     <section id="command-reference-list">
