@@ -1,3 +1,11 @@
+2008-04-15  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/commands/info.py, jhbuild/modtypes/distutils.py,
+	jhbuild/versioncontrol/git.py, jhbuild/versioncontrol/mtn.py,
+	doc/C/jhbuild.xml: changed jhbuild info to print info on all modules
+	when there is no module specified; also fixed issues with getting
+	revision info for git and monotone modules.
+
 2008-04-15  Andy Wingo  <wingo@pobox.com>
 
 	* modulesets/bootstrap.modules: Update libtool to 1.5.26 +
